--- a/client/assets/scss/styles.css
+++ b/client/assets/scss/styles.css
@@ -7,6 +7,11 @@
   background-image: url("../static/images/back.jpg");
 }
 
+.back-top {
+  background-image: url("../static/images/113.png");
+
+}
+
 .sticky_header {
   position: sticky;
   top: 0;
